# biomevae

./: .gitignore  AUDIT_REPORT.md  README.md  README_evaluation.md  README_figures.md  README_installation.md  README_training.md  environment.lock.yml  pyproject.toml  requirement_simple.yml  requirements.lock.txt  requirements.yml
configs/: optuna_search_space.template.json  optuna_search_space_diva.template.json  optuna_search_space_dsvae.template.json  optuna_search_space_phylodiva.template.json
data_testing/: ParseMeta.py  phyla.tsv
data_testing/slides/: benchmark_slides.tex
docs/: biomevae_theory_practice_slides.tex  capda_vae_theory.md  compositional_vae_slides.tex  diva_models_one_slide.tex  diva_theory.md  flowxformervae_theory.md  flowxformervae_theory.tex  graphvae_theory.md  graphvae_theory.tex  hgvae_zi_theory.md  hgvae_zi_theory.tex  hyperbolic_philrvae_theory.md  hyperbolicvae_theory.md  hyperbolicvae_theory.tex  philrvae_theory.md  philrvae_theory.tex  phylodiva_theory.md  phylofusionvae_theory.md  phylofusionvae_theory.tex  taxonomy_vs_domain_invariance_theorem.md  theory_coverage.md  three_models_one_slide.tex  tree_dtm_vae_theory.md  treepriorvae_theory.md  treepriorvae_theory.tex  vae_theory.md  vae_theory.tex
docs/paper/: main.tex  treenbvae_theory.tex
experiments/loop_new_model/: LOOP_LOG.md  MODEL_CARD.md  capda_vae.py  loso_harness.py
hpc/: aggregate_results.sh  aggregate_results.slurm  check_meta_logs.py  classify_model.sh  classify_model.slurm  classify_xgboost_baseline.sh  classify_xgboost_baseline.slurm  collect_meta_figures.py  collect_meta_quality_performance.py  generate_figures.sh  generate_figures.slurm  postprocess_model.sh  postprocess_model.slurm  run_snakemake.slurm  run_snakemake_loso.slurm  run_snakemake_loso_strict.slurm  run_snakemake_meta.slurm  single_study_pipeline.sh  single_study_pipeline.slurm  submit_all.sh  submit_all_classify.sh  submit_all_postprocess.sh  train_model.sh  train_model.slurm
per_study/: per_study_manifest.json
per_study/AsnicarF_2017/: metadata_validation.json  phyla.tsv  sample_metadata.tsv  sgb_table.tsv
per_study/AsnicarF_2021/: metadata_validation.json  phyla.tsv  sample_metadata.tsv  sgb_table.tsv
per_study/BackhedF_2015/: metadata_validation.json  phyla.tsv  sample_metadata.tsv  sgb_table.tsv
per_study/BedarfJR_2017/: metadata_validation.json  phyla.tsv  sample_metadata.tsv  sgb_table.tsv
per_study/Bengtsson-PalmeJ_2015/: metadata_validation.json  phyla.tsv  sample_metadata.tsv  sgb_table.tsv
per_study/BritoIL_2016/: metadata_validation.json  phyla.tsv  sample_metadata.tsv  sgb_table.tsv
per_study/BrooksB_2017/: metadata_validation.json  phyla.tsv  sample_metadata.tsv  sgb_table.tsv
per_study/Castro-NallarE_2015/: metadata_validation.json  phyla.tsv  sample_metadata.tsv  sgb_table.tsv
per_study/ChengpingW_2017/: metadata_validation.json  phyla.tsv  sample_metadata.tsv  sgb_table.tsv
per_study/ChngKR_2016/: metadata_validation.json  phyla.tsv  sample_metadata.tsv  sgb_table.tsv
per_study/ChuDM_2017/: metadata_validation.json  phyla.tsv  sample_metadata.tsv  sgb_table.tsv
per_study/CosteaPI_2017/: metadata_validation.json  phyla.tsv  sample_metadata.tsv  sgb_table.tsv
per_study/DavidLA_2015/: metadata_validation.json  phyla.tsv  (+2 more)
results/: latest_loso_strict_summary.tsv  latest_single_meta_summary.tsv
scripts/: plot_current_results.py  plot_disease_category_stats.py  plot_loso_strict_stats.py  plot_model_significance.py  plot_philr_illustration.py
tests/: test_all_models.py  test_capda_single_study.py  test_coral_align.py  test_diva.py  test_diva_betavae.py  test_diva_optuna.py  test_dsvae.py  test_five_seed_evaluation.py  test_flowxformer.py  test_gabriel_column_masking.py  test_kl_warmup_resolution.py  test_loso.py  test_loso_classify.py  test_phylo_cov.py  test_phylodiva_smoke.py  test_posterior_collapse_scale.py  test_taxi_smoke.py  test_taxonomy_header_row.py  test_train_cli_optuna_flag.py
workflow/: README.md  README_loso.md  Snakefile  Snakefile.loso  Snakefile.loso_strict  Snakefile.meta.no_interpret
(+465 files in other folders)
